--- a/注册.html
+++ b/注册.html
@@ -35,7 +35,7 @@
 </textarea>
 </label>
 </form>
-<p><a href="首页index.html">首页</a><a href="登录.html"> 返回</a> </p>
+<p><a href="index.html">首页</a><a href="登录.html"> 返回</a></p>
 
 </body>
 </html>
