--- a/注意事项.html
+++ b/注意事项.html
@@ -11,7 +11,7 @@
   </MARQUEE>
   
 </p>
-<p><a href="目录.html"> </a><a href="首页index.html">首页 </a><a href="目录.html">返回</a> </p>
+<p><a href="../../../Desktop/网页设计/目录.html"> </a><a href="index.html">首页</a> <a href="目录.html">返回</a></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">使用消毒产品时有哪些注意事项？&nbsp;</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">1.应使用符合国家卫生健康部门管理要求的消毒产品。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">2.含氯消毒液对皮肤黏膜有一定的刺激性，配制，使用及清洗过程中须做好个人防护。</p>
@@ -21,6 +21,7 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">6.用含氯消毒液擦拭物体表面，达到消毒时间后，要用清水擦拭表面，减少消毒液残留，降低腐蚀性。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">7.75%乙醇应远离火源，且不得用于空气喷雾消毒或直接对人体，衣物喷雾消毒。酒精易挥发，消毒完后无需再处理。</p>
 <p>&nbsp;</p>
-<MARQUEE scrolldelay ="100" ><p><img src="../网页素材/7BB04CCC265CBF658581B413282487B3.jpg" width="502" height="374" /><img src="../网页素材/155DBF34F4F4D7CE280C4DC3274C8A19.jpg" width="562" height="374" /><img src="../网页素材/396E6E7A0F354AD153CA29A79FE041AE.jpg" width="553" height="374" /></p></MARQUEE>
+<MARQUEE scrolldelay ="100" ><p><img src="../../../Desktop/网页素材/7BB04CCC265CBF658581B413282487B3.jpg" width="502" height="374" /><img src="../../../Desktop/网页素材/155DBF34F4F4D7CE280C4DC3274C8A19.jpg" width="562" height="374" /><img src="../../../Desktop/网页素材/396E6E7A0F354AD153CA29A79FE041AE.jpg" width="553" height="374" /></p></MARQUEE>
+<p><span style="color：#0000FF ;font-family:隶书;">版权信息： Copright &copy; 图片来自于摄图网 Inc. ALL Rights Reserved</span>
 </body>
 </html>
