--- a/登录.html
+++ b/登录.html
@@ -58,7 +58,7 @@
     </label>
 
 </form>
-<p>没有账号？<a href="注册.html">注册</a><a href="首页index.html"> 返回</a></p>
+<p>没有账号？<a href="注册.html">注册 </a><a href="index.html">返回</a></p>
 
 </body>
 </html>
