--- a/目录.html
+++ b/目录.html
@@ -16,7 +16,7 @@
   4.新冠肺炎的传播途径有哪些？<br />
   5.新冠肺炎的主要症状是什么？<br />
   6.新冠肺炎的症状与普通感冒、流感有什么区别?<br />
-  <img src="../网页素材/B2DF5DC878D486110CF79027975EEE1A.jpg" width="499" height="400" /></p>
+  <img src="../../../Desktop/网页素材/B2DF5DC878D486110CF79027975EEE1A.jpg" width="499" height="400" /></p>
   <p><a href="第一章.html">进入</a><br />
   </p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">第二章 学校防控管理<br />
@@ -31,7 +31,7 @@
 7.如何设置洗手设施?<br />
 8．如何设置（临时）隔离室&nbsp;?<br />
 9.怎样保障学校饮用水安全?/1810,校园管理还须注意哪些问题?&nbsp;</p>
-<p><img src="../网页素材/302C2D2C532BD05A37F0F739299D59DA.jpg" width="499" height="400" /></p>
+<p><img src="../../../Desktop/网页素材/302C2D2C532BD05A37F0F739299D59DA.jpg" width="499" height="400" /></p>
 <p><a href="第二章.html">进入</a><br />
 </p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">第三章 健康防护技能</p>
@@ -45,11 +45,11 @@
 <p>7．如何对教室地面进行清洁、消毒?<br />
 8.如果出现区吐物应如何处理?</p>
 <p>9．如何对餐具进行消毒?<br />
-10.如何对食堂、食物操作间或准备间进行消毒?</p>
-<p><img src="../网页素材/B8FF204064B570C5D69F660E2F5AC754.jpg" width="499" height="400" /></p>
-<p><a href="第三章.html">进入</a> </p>
+10.如何对食堂、食物操作间或准备间进行消毒?<a href="注意事项.html"></a></p>
+<p><img src="../../../Desktop/网页素材/B8FF204064B570C5D69F660E2F5AC754.jpg" width="499" height="400" /></p>
+<p><a href="第三章.html">进入</a></p>
 <p><a href="注意事项.html">注意事项</a><br />
-  <a href="首页index.html">首页</a><a href="前言.html"> 前言</a><br />
+  <a href="../../../Desktop/网页设计/前言.html"> </a><a href="index.html">首页 </a><a href="前言.html">前言</a><br />
 </p>
 </body>
 </html>
