--- a/第一章.html
+++ b/第一章.html
@@ -6,7 +6,7 @@
 </head>
 <BODY bgcolor="#9CC">
 <body>
-<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.什么是新冠病毒？<img src="../网页素材/360484E42A4CB59654D1F704CEA7471A.jpg" width="562" height="827" align="right" /></p>
+<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.什么是新冠病毒？<img src="../../../Desktop/网页素材/360484E42A4CB59654D1F704CEA7471A.jpg" width="562" height="827" align="right" /></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">新型冠状病毒属于B属的冠状病毒,有包膜。其基因特征与SARS-CoV和MERS-CoV有明显区别。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">病毒对紫外线和热敏感, 56℃30分钟75%乙醇、含氯消毒液、过氧乙酸和过氧化氢等均可有效灭活病毒。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">国际病毒分类委员会将新冠病毒命名为SARS-COV-2.</p>
@@ -30,8 +30,8 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">和腹泻等症状。重型，危重型患者病程中可为中低热，甚至无明显发热症状。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">6.新冠肺炎的症状与普通感冒，流感有什么区别？</p>
-<p style="color:#0000FF;font-size:30px;font-family:隶书;"><img src="../网页素材/650F5EC9287C35FE6E2AD7E69F337588.jpg" width="709" height="568" />&nbsp;<img src="../网页素材/FE41F5C4DC7FF42EA811BA16466D49B2.jpg" width="711" height="568" /></p>
-<p><a href="目录.html">返回</a><a href="首页index.html"> 首页</a></p>
+<p style="color:#0000FF;font-size:30px;font-family:隶书;"><img src="../../../Desktop/网页素材/650F5EC9287C35FE6E2AD7E69F337588.jpg" width="709" height="568" />&nbsp;<img src="../../../Desktop/网页素材/FE41F5C4DC7FF42EA811BA16466D49B2.jpg" width="711" height="568" /></p>
+<p><a href="../../../Desktop/网页设计/目录.html">返回</a><a href="index.html"> 首页</a></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
 </body>
 </html>
