--- a/第二章.html
+++ b/第二章.html
@@ -6,7 +6,7 @@
 </head>
 <BODY bgcolor="#9CC">
 <body>
-<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.如何建立学校的应急工作体系？<img src="../网页素材/AA1F27FF028030B53965EBDA261F37C2.jpg" width="510" height="728" align="right" /></p>
+<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.如何建立学校的应急工作体系？<img src="../../../Desktop/网页素材/AA1F27FF028030B53965EBDA261F37C2.jpg" width="510" height="728" align="right" /></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">建立学校、年级、班级、家长四级防控工作联系网络,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">明确属地教育主管部门、卫生健康管理部门、疾控机构、</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">就近发热门诊/定点医院及社区的联系人及其联系电话,加强沟通。</p>
@@ -29,7 +29,7 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">教室、办公室等学习工作场所应定期开窗通风。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">5.怎样开展师生员工健康排查？</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;">学校每日掌握师生员工健康情况,实行&ldquo;日报告&rdquo;&nbsp;&ldquo;零报告&rdquo;制度,并向主管部门报<img src="../网页素材/C3F32D888B6C4B4298246E24C98E69B0.jpg" width="513" height="540" align="right" /></p>
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;">学校每日掌握师生员工健康情况,实行&ldquo;日报告&rdquo;&nbsp;&ldquo;零报告&rdquo;制度,并向主管部门报<img src="../../../Desktop/网页素材/C3F32D888B6C4B4298246E24C98E69B0.jpg" width="513" height="540" align="right" /></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">告。要求所有从外地返回的师生员工,回到居住地后应当居家隔离14天,无发热、</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">咳嗽等症状后方可返校。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
@@ -50,12 +50,12 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">设置(临时)隔离室,以备师生员工出现发热等症状时立即进行暂时隔离。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">隔离室要求设置醒目的&ldquo;隔离室&rdquo;标志,位置相对独立,不得设在紧靠教室、</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">食堂以及学生易到达的场所,最好有单独使用的卫生间和洗手设施。</p>
-<p><img src="../网页素材/233823843E3DF510DFC2A0B69FAB6E94.jpg" width="1185" height="453" /></p>
+<p><img src="../../../Desktop/网页素材/233823843E3DF510DFC2A0B69FAB6E94.jpg" width="1185" height="453" /></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">9.怎样保障学校引用水安全？</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">做好对自备水源的防护，开学前按要求进行各类供水设施（自建集中式供水设施，二次供水，</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">管理分质供水，净水器及桶装水饮水机，保温桶，开水器等）的清洗消毒，经水质监测合格方可供水。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">学校生活饮用水管理符合相关卫生要求。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
-<p><a href="目录.html">返回 </a><a href="首页index.html">首页</a></p>
+<p><a href="../../../Desktop/网页设计/目录.html">返回  </a><a href="index.html">首页</a></p>
 </body>
 </html>
