--- a/第三章.html
+++ b/第三章.html
@@ -6,30 +6,30 @@
 </head>
 <BODY bgcolor="#9CC">
 <body>
-<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.如何正确选择和佩戴口罩？<img src="../网页素材/713943AE518C813E9FCFF085BF0FC48A.jpg" width="493" height="596" align="right" /></p>
+<p style="color:#0000FF;font-size:30px;font-family:隶书;">1.如何正确选择和佩戴口罩？<img src="../../../Desktop/网页素材/713943AE518C813E9FCFF085BF0FC48A.jpg" width="493" height="596" align="right" /></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">选择合适尺码的医用口罩。佩戴前先洗手。<br />
 佩戴时,口罩深色面朝外,金属条向上,将折面完全展开,完全覆盖嘴、
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">鼻、下巴,金属条沿鼻两侧压实,使口罩与面部完全贴合(不适合佩戴者除外)。
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">佩戴后,尽量不触摸,若须触摸,触摸前、后彻底洗手。</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../网页素材/0289A452ECD65D1D6231895C0BD0F687.jpg" width="557" height="275" /></p>
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../../../Desktop/网页素材/0289A452ECD65D1D6231895C0BD0F687.jpg" width="557" height="275" /></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">2.如何正确洗手？</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">用水将手淋湿,取足够皂液涂满整个手部,充分揉搓,用水清洗双手,用纸巾擦干,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">最后用纸巾垫着关掉水龙头。</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../网页素材/4866D6354C5D61D20D25A10E52A1F933.jpg" width="568" height="394" /></p>
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../../../Desktop/网页素材/4866D6354C5D61D20D25A10E52A1F933.jpg" width="568" height="394" /></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">3.如何配置消毒液？</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">含氯泡腾消毒片易溶于水。根据所需配制的消毒液浓度和体积,以及包装标签上显示的有效氯含量,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">取一定数量消毒片溶解搅匀即可。如果1片含氯泡腾片有效氯是500毫克,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">溶于1升水就是500&nbsp;mg/Lo&nbsp;84消毒液可按照说明书及使用的浓度来配制</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">,含氯消毒液要用冷水配制且临用现配。</p>
-<p style="color:#0000FF;font-size:30px;font-family:隶书;"><img src="../网页素材/534272374403834C66FA9A806BD29113.jpg" width="962" height="331" /></p>
+<p style="color:#0000FF;font-size:30px;font-family:隶书;"><img src="../../../Desktop/网页素材/534272374403834C66FA9A806BD29113.jpg" width="962" height="331" /></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">4.教室空气如何通风消毒？</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">以开窗自然通风为主,有条件的采用机械酒风。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">自然通风时，注意室内温度不能过低。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">通以不畅的房间,按照1.5W/m&rdquo;在室内安装紫外灯无人状态下,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">开紫外灯消毒30-60分钟,有人时采用循环风空气消毒器(无臭氧)消毒。</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../网页素材/A47BFA75B6F723D83453B742915CD845.jpg" width="713" height="423" /></p>
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;"><img src="../../../Desktop/网页素材/A47BFA75B6F723D83453B742915CD845.jpg" width="713" height="423" /></p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">5.如何对普通物体表面进行预防性消毒</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;">对课桌椅、活动室操作台、教辅设备每日清洁,定期消毒。<img src="../网页素材/56F987A69B98DA3596192B60FB96A0F2.jpg" width="595" height="539" align="right" /><br />
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;">对课桌椅、活动室操作台、教辅设备每日清洁,定期消毒。<img src="../../../Desktop/网页素材/56F987A69B98DA3596192B60FB96A0F2.jpg" width="595" height="539" align="right" /><br />
 消毒应在学生放学后进行。对课桌椅、活动室操作台等可选用有效氯500&nbsp;mgL.消毒液擦拭,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">作用30分钟后,再用清水擦拭。也可用含75%乙醇擦拭消毒,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">还可用含1.5%-3%过氧化氢或含醇季铵盐的消毒湿巾擦拭消毒。</p>
@@ -46,7 +46,7 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">按照操作说明进行处理;或者用吸水材料加足量高浓度消毒液(如含氯消毒液)或有效的消毒干巾对呕吐物进行覆盖消毒。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">清除呕吐物后,再使用含氯消毒液进行物体表面消毒处理。</p>
 <p style="color:#0000FF;font-size:30px;font-family:隶书;">9.如何对餐具进行消毒？</p>
-<p style="color:#DA70D6;font-size:20px;font-family:隶书;">督具去除残渣,洗净后消毒。<img src="../网页素材/96513B3B7FD2FC163600F9143F532A83.jpg" width="657" height="392" align="right" /></p>
+<p style="color:#DA70D6;font-size:20px;font-family:隶书;">督具去除残渣,洗净后消毒。<img src="../../../Desktop/网页素材/96513B3B7FD2FC163600F9143F532A83.jpg" width="657" height="392" align="right" /></p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">耐热的餐饮具可用煮沸或流通蒸汽消毒15-30分钟,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">或使用符合国家标准的食具消毒柜,也可用有效氯250&nbsp;mglL-500&nbsp;mg/L,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">消毒液浸泡30分钟,再用清水将残留消毒液洗净,控干保存备用。</p>
@@ -57,6 +57,6 @@
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;30分钟后清水擦拭。生、熟食的砧板分开,使用后用清水洗净,</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">在阳光下晾晒后放到阴凉通风处,定期用煮沸方法消毒。</p>
 <p style="color:#DA70D6;font-size:20px;font-family:隶书;">&nbsp;</p>
-<p ><a href="目录.html">返回  </a><a href="首页index.html">首页</a></p>
+<p ><a href="../../../Desktop/网页设计/目录.html">返回  </a><a href="index.html"> 首页</a></p>
 </body>
 </html>
